# azure-b1-test

./: =1.0.3  app.py  pyproject.toml  requirements.txt
.github/workflows/: release_terukko-tools.yml
rosenka/: rosenka.py
