[tool.poetry]
name = "b1-test"
version = "0.1.0"
description = ""
authors = ["Masuda Shinsuke <shinsuke.masuda@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
PyMuPDF = "^1.21.1"
fire = "^0.5.0"
nicegui = "1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
